#1692 Adjusted DynamicEntityTypeMixedAndRepetitiveModificationTest.